# obsidian-typst

./: .gitignore  CONTRIBUTING.md  LICENSE  Processor.md  README.md  Snippet.md  Taskfile.yml  biome.json  defaults.md  manifest.json  package.json  postcss.config.cjs  tsconfig.json  versions.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: release.yml
docs/: Commands.md  TabJump.md  obsidian-latex-suite-migration.md
docs/processor/: README.md
docs/shortcut/: README.md
docs/snippet/: Matrix.md  README.md
docs/snippets/: Cases.md  README.md
scripts/: ops.ts  symbols.ts  version.ts
snippets/: Cases.md
src/: constants.ts  main.css  main.ts
src/components/: SVG.ts  Typst.ts
src/core/: ea.ts  editor.ts  leaf.css  leaf.ts  settings.css  settings.ts
src/data/: shortcuts.json  symbols.json
src/extensions/: excalidraw.ts
src/lib/: font.ts  observer.ts  processor.ts  serializer.ts  snippet.ts  typst.css  typst.ts  util.ts  worker.ts
src/libs/: processor.ts  snippet.ts  typst.css  typst.ts  worker.ts
src/types/: excalidraw-automate.d.ts  global.d.ts  global.ts  jsons.d.ts  obsidian.d.ts  untar-sync.d.ts
src/utils/: customFragment.ts  custromElementRegistry.ts  findMathSegments.ts  hashLike.ts  observer.ts  packageCompressor.ts  symbolSearcher.ts
wasm/: Cargo.toml
wasm/src/: lib.rs  vfs.rs  wasm.code-workspace  world.rs
wasm/src/lexer/: bracket.rs
wasm/src/parser/: bracket.rs  mod.rs
wasm/src/serde/: bracket.rs  diagnostic.rs  font.rs  mod.rs  package.rs  pdf.rs  processor.rs  svg.rs
wasm/src/utils/: char_position.rs  mod.rs
(+58 files in other folders)
