[package]
name = "typst-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
typst = "0.13.1"
typst-svg = "0.13.1"
typst-assets = { version = "0.13.1", features = ["fonts"] }
comemo = "^0"

wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
js-sys = "^0.3"
serde = "^1.0"
serde-wasm-bindgen = "^0.6"
tsify = "^0.5"
console_error_panic_hook = "^0.1"

rayon = "^1"
rustc-hash = "2.1.1"

chrono = "^0.4"
send_wrapper = "^0"

[features]
default = []

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
